--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "axios": "^0.17.0",
     "crypto-js": "^3.1.9-1",
     "lodash": "^4.17.4",
+    "node-less-chokidar": "latest",
+    "npm-run-all": "latest",
     "prop-types": "latest",
     "ramda": "^0.25.0",
     "react": "^16.0.0",
@@ -14,17 +16,23 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "latest",
+    "react-spinkit": "^3.0.0",
     "react-toolbox": "^2.0.0-beta.12",
     "redux": "latest",
     "redux-logger": "^3.0.6",
     "redux-persist": "^4.8.1",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
-    "seamless-immutable": "^7.1.2"
+    "seamless-immutable": "^7.1.2",
+    "youtube-parser": "^1.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-less-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-less-chokidar src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
