--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "latest",
     "react-spinkit": "^3.0.0",
     "react-toolbox": "^2.0.0-beta.12",
+    "react-transition-group": "^1.2.1",
     "redux": "latest",
     "redux-logger": "^3.0.6",
     "redux-persist": "^4.8.1",
