--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.17.0",
     "crypto-js": "^3.1.9-1",
+    "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.4",
     "node-less-chokidar": "latest",
     "npm-run-all": "latest",
@@ -34,7 +35,7 @@
     "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
+    "build": "npm-run-all build-css build-js && rm build/static/js/*.map",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
